Change sass build output

--- a/static/package.json
+++ b/static/package.json
@@ -11,7 +11,7 @@
     "watch": "nodemon -e scss -x \"npm run sass-build\"",
 
     "sass-test": "stylelint \"sass/**/*.scss\" --syntax scss",
-    "sass-build": "node-sass --indent-width 4 --source-map true --output ./ --output-style compressed ./sass/core.scss ./css/style.css",
+    "sass-build": "node-sass --indent-width 4 --source-map true --output ./ --output-style expanded ./sass/core.scss ./css/style.css",
     "postcss-build": "postcss -c postcss.json",
     "postcss-test": "stylelint style.css"
 
